    import controlador.Mundo;

    public class Main {
        public static void main(String[] args) {
            Mundo mundo = new Mundo();
            mundo.simularDia();
        }
    }
